# yapot

./: README.md  cli-tool.py  requirements.txt  setup.cfg  setup.py
src/: cli-tool.py  yapot.py
yapot/: __init__.py  agenda.pdf.txt  cli.py  img-conv.py  yapot.py  yapot_utils.py
