[metadata]
name = yapot
version = 0.1.0
author = Timothy Duffy
author-email = tim@timduffy.me
summary = Yet Another PDF OCR Tool
description-file = README.md
license = GPLv3+
classifier =
    Development Status :: 3 - Alpha
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Intended Audience :: Developers
keywords =
    pdf
    ocr
    yapot
[files]
packages =
    yapot
[entry_points]
console_scripts =
    yapot = yapot.cli:run
